# Retrival_augmented_generation

./: .gitignore  README.md  pyproject.toml
Source/: main.py  requirements.txt
Source/Data/evaluation/: evaluation_results_20251226_154838.csv  size_1000_overlap_350.csv  size_1500_overlap_500.csv  size_500_overlap_200.csv  size_50_overlap_10.csv
Source/Data/ground_truth/: evaluation_dataset.csv
Source/Data/vector_databases/: index.faiss  index.pkl
Source/Data/vector_databases/chunk50/: index.pkl
Source/config/: config.yaml  settings_loader.py
Source/exceptions/: custom_exception.py
Source/logger/: custom_logger.py
Source/models/: embedding.py
Source/notebook/: evaluation_dataset.ipynb  init.ipynb
Source/pipeline/: data_chunking.py  data_ingestion.py  embed_and_persist.py  evaluation.py  evaluation_1.py
